# doit-watch

./: .gitignore  AUTHORS  CHANGES  MANIFEST.in  README.md  dodo.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/doit_auto1/: __init__.py  cmd_auto.py  filewatch.py
src/doit_watch/: __init__.py  cmd_watch.py  filewatch.py
tests/: conftest.py  test_cmd_auto.py  test_cmd_watch.py
