[metadata]
name = doit-auto1
version = 0.1.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = doit plugin: cmd auto
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydoit/doit-auto1
project_urls =
    Bug Tracker = https://github.com/pydoit/doit-auto1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = doit_auto1
python_requires = >=3.8
install_requires =
    macfsevents;sys_platform=='darwin'
    pyinotify;sys_platform=='linux'

[options.entry_points]
doit.COMMAND =
    auto = doit_auto1:Auto