[metadata]
name = doit-auto1
version = 0.1.0
author = Eduardo Naufel Schettino
author_email = schettino72@gmail.com
description = doit cmd plugin: auto - watch filesystem and re-execute on changes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydoit/doit-auto1
project_urls =
    Documentation =  "https://pydoit.org/cmd-other.html#auto-watch"
    Source = https://github.com/pydoit/doit-auto1
    Bug Tracker = https://github.com/pydoit/doit-auto1/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = doit_auto1
python_requires = >=3.8
install_requires =
    macfsevents;sys_platform=='darwin'
    pyinotify;sys_platform=='linux'

[options.entry_points]
doit.COMMAND =
    auto = doit_auto1:Auto